# wasm-project-template

./: Cargo.toml  README.md
dev-server/: Cargo.toml
dev-server/src/: main.rs
wasm-module/: Cargo.toml
wasm-module/src/: lib.rs  scripting.rs
www/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
