[package]
name = "wasm-module"
version = "0.1.0"
authors = ["Alvin Wong <alvinhochun@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
kiss3d = "0.22"
nalgebra = "0.19.0"
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1", optional = true }
